--- a/public/stylesheets/css/freelancer.css
+++ b/public/stylesheets/css/freelancer.css
@@ -36,43 +36,26 @@ h6 {
     font-weight: 700;
 }
 
-hr.star-light,
-hr.star-primary {
+hr {
     margin: 25px auto 30px;
     padding: 0;
-    max-width: 250px;
+    max-width: 70%;
     border: 0;
     border-top: solid 5px;
     text-align: center;
-}
-
-hr.star-light:after,
-hr.star-primary:after {
-    content: "\f005";
-    display: inline-block;
-    position: relative;
-    top: -.8em;
-    padding: 0 .25em;
-    font-family: FontAwesome;
-    font-size: 2em;
-}
-
-hr.star-light {
-    border-color: #fff;
-}
-
-hr.star-light:after {
-    color: #fff;
-    background-color: #18bc9c;
-}
-
-hr.star-primary {
+    color: #2c3e50;
     border-color: #2c3e50;
 }
 
-hr.star-primary:after {
-    color: #2c3e50;
-    background-color: #fff;
+#head-hr {
+    margin: 25px auto 30px;
+    padding: 0;
+    max-width: 70%;
+    border: 0;
+    border-top: solid 5px;
+    text-align: center;
+    color: #fff;
+    border-color: #fff;
 }
 
 .img-centered {
@@ -195,6 +178,32 @@ section.success a.active {
     color: #2c3e50;
 }
 
+input::-webkit-input-placeholder {
+ color: #fff!important;
+}
+input:-moz-placeholder { /* older Firefox*/
+ color: #fff!important;
+}
+input::-moz-placeholder { /* Firefox 19+ */ 
+ color: #fff!important;
+} 
+input:-ms-input-placeholder { 
+ color: #fff!important;
+}
+
+textarea::-webkit-input-placeholder {
+ color: #fff!important;
+}
+textarea:-moz-placeholder { /* older Firefox*/
+ color: #fff!important;
+}
+textarea::-moz-placeholder { /* Firefox 19+ */ 
+ color: #fff!important;
+} 
+textarea:-ms-input-placeholder { 
+ color: #fff!important;
+}
+
 @media(max-width:767px) {
     section {
         padding: 75px 0;
@@ -205,62 +214,7 @@ section.success a.active {
     }
 }
 
-#portfolio .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
 
-#portfolio .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 400px;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background: rgba(24,188,156,.9);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
-    font-size: 20px;
-    color: #fff;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
-    margin-top: -12px;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#portfolio * {
-    z-index: 2;
-}
-
-@media(min-width:767px) {
-    #portfolio .portfolio-item {
-        margin: 0 0 30px;
-    }
-}
 
 .btn-outline {
     margin-top: 15px;
@@ -336,6 +290,10 @@ form .row:first-child .floating-label-form-group {
     border-top: 1px solid #eee;
 }
 
+#antispam {
+    display: none;
+}
+
 footer {
     color: #fff;
 }
@@ -396,66 +354,3 @@ footer .footer-below {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    text-align: center;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.portfolio-modal .modal-content h2 {
-    margin: 0;
-    font-size: 3em;
-}
-
-.portfolio-modal .modal-content img {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content .item-details {
-    margin: 30px 0;
-}
-
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.portfolio-modal .close-modal:hover {
-    opacity: .3;
-}
-
-.portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
-    background-color: #2c3e50;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    background-color: #2c3e50;
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
-.portfolio-modal .modal-backdrop {
-    display: none;
-    opacity: 0;
-}
